--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
     <div id="sidebar">
         <p>Add a new book!</p>
-        <form action="#">
-            <div class="input">
+        <form id="form" action="#">
+            <div class="form-row">
                 <label for="author">Author</label>
                 <input type="text" id="author">
             </div>
             
-            <div class="input">
+            <div class="form-row">
                 <label for="title">Title</label>
                 <input type="text" id="title">
             </div>
 
-            <div class="input">
+            <div class="form-row">
                 <label for="pages">Pages</label>
                 <input type="number" id="pages">
             </div>
 
-            <div class="input">
+            <div class="form-row">
                 <button type="submit">Submit</button>
             </div>
         </form>
@@ -38,17 +38,17 @@
             <p>author text</p>
             <p>pages text</p>
             <p>read colour toggle</p>
-            <button id="read">Mark as read</button>
-            <button id="delete">Delete</button>
+            <button class="read">Mark as read</button>
+            <button class="delete">Delete</button>
         </div>
-        
+
         <div class="book">
             <p>title text</p>
             <p>author text</p>
             <p>pages text</p>
             <p>read colour toggle</p>
-            <button id="read">Mark as read</button>
-            <button id="delete">Delete</button>
+            <button class="read">Mark as read</button>
+            <button class="delete">Delete</button>
         </div>
 
     </div>
